Fix line getting out of bounds in offer card

--- a/src/app/offers/offer-card/offer-card.component.css
+++ b/src/app/offers/offer-card/offer-card.component.css
@@ -12,3 +12,7 @@
     right: 10px;
     color: white;
 }
+
+#offer-card-content {
+    word-wrap: break-word;
+}
